--- a/example/package.json
+++ b/example/package.json
@@ -1,93 +1,71 @@
 {
-    "name": "flutter_vscode_extension",
-    "description": "VSCode extension for Flutter VSCode package example",
-    "version": "0.0.1",
-    "publisher": "slowgen",
-    "private": true,
-    "license": "MIT",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/SlowGen/flutter_vscode_extension"
-    },
-    "engines": {
-        "vscode": "^1.75.0"
-    },
-    "extensionKind": [
-        "workspace"
-    ],
-    "categories": [
-        "Other"
-    ],
-    "activationEvents": [],
-    "main": "./out/extension.js",
-    "files": [
-        "out",
-        "build/web"
-    ],
-    "contributes": {
-        "viewsContainers": {
-            "activitybar": [
-                {
-                    "id": "flutter-vscode-extension-sidebar",
-                    "title": "Flutter VSCode Example",
-                    "icon": "$(flutter)"
-                }
-            ]
-        },
-        "views": {
-            "flutter-vscode-extension-sidebar": [
-                {
-                    "type": "webview",
-                    "icon": "web/icons/Icon-192.png",
-                    "id": "flutterVSCodeExample.counter",
-                    "name": "Flutter Counter"
-                }
-            ]
-
-        },
-        "commands": [
-            {
-                "command": "flutterVSCodeExample.addOne",
-                "category": "Counter Button",
-                "title": "Add One",
-                "icon": "$(add)"
-            },
-            {
-                "command": "flutterVSCodeExample.reset",
-                "category": "Counter Button",
-                "title": "Reset to zero",
-                "icon": "$(clear-all)"
-            }
-        ],
-        "menus": {
-            "view/title": [
-                {
-                    "command": "flutterVSCodeExample.addOne",
-                    "group": "navigation",
-                    "when": "view == flutterVSCodeExample.counter"
-                },
-                {
-                    "command": "flutterVSCodeExample.reset",
-                    "group": "navigation",
-                    "when": "view == flutterVSCodeExample.counter"
-                }
-            ]
+  "name": "ext_poc",
+  "description": "VSCode extension POC",
+  "version": "0.0.1",
+  "publisher": "slowgen",
+  "private": true,
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/SlowGen/ext_poc"
+  },
+  "engines": {
+    "vscode": "^1.80.0"
+  },
+  "categories": [
+    "Other"
+  ],
+  "activationEvents": [
+    "onWebviewView:extPoc.counter"
+  ],
+  "main": "./out/extension.js",
+  "contributes": {
+    "views": {
+      "explorer": [
+        {
+          "icon": "web/icons/Icon-192.png",
+          "id": "extPoc.counter",
+          "name": "Flutter Counter",
+          "type": "webview"
         }
+      ]
     },
-    "scripts": {
-        "vscode:prepublish": "npm run compile",
-        "compile": "scripts/compile.sh",
-        "watch": "tsc -watch -p ./"
-    },
-    "devDependencies": {
-        "@eslint/js": "^9.13.0",
-        "@stylistic/eslint-plugin": "^2.9.0",
-        "@types/node": "^24.0.14",
-        "@types/vscode": "^1.73.0",
-        "@vscode/wasm-component-model": "^1.0.2",
-        "eslint": "^9.13.0",
-        "typescript": "^5.8.2",
-        "typescript-eslint": "^8.26.0"
+    "commands": [
+      {
+        "command": "extPoc.addOne",
+        "category": "Counter Button",
+        "title": "Add One",
+        "icon": "$(add)"
+      },
+      {
+        "command": "extPoc.reset",
+        "category": "Counter Button",
+        "title": "Reset to zero",
+        "icon": "$(clear-all)"
+      }
+    ],
+    "menus": {
+      "view/title": [
+        {
+          "command": "extPoc.addOne",
+          "group": "navigation",
+          "when": "view == extPoc.counter"
+        },
+        {
+          "command": "extPoc.reset",
+          "group": "navigation",
+          "when": "view == extPoc.counter"
+        }
+      ]
     }
+  },
+  "scripts": {
+    "vscode:prepublish": "npm run compile",
+    "compile": "scripts/compile.sh",
+    "watch": "tsc -watch -p ./"
+  },
+  "devDependencies": {
+    "@types/vscode": "^1.80.0",
+    "typescript": "^5.1.3"
+  }
 }
-
