--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,4 +1,17 @@
 include: package:very_good_analysis/analysis_options.yaml
 
+analyzer:
+  errors:
+    missing_whitespace_between_adjacent_strings: ignore
+  exclude:
+    - example/**
+
+linter:
+  rules:
+    avoid_print: false
+    missing_whitespace_between_adjacent_strings: false
+    cascade_invocations: false
+    avoid_single_cascade_in_expression_statements: false
+
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
