--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -1,17 +1,16 @@
 {
-	"compilerOptions": {
-		"module": "commonjs",
-		"target": "es2020",
-		"outDir": "out",
-		"lib": ["es2020"],
-		"sourceMap": true,
-		"rootDir": "src",
-		"strict": true,
-		"moduleResolution": "node",
-		"esModuleInterop": true,
-		"skipLibCheck": true,
-		"forceConsistentCasingInFileNames": true
-	},
-	"exclude": ["node_modules", "out", "lib", "build", "web"]
+  "compilerOptions": {
+    "module": "commonjs",
+    "target": "ES2020",
+    "outDir": "out",
+    "lib": [
+      "ES2020",
+      "dom"
+    ],
+    "sourceMap": true,
+    "rootDir": "src",
+    "strict": true,
+    "moduleResolution": "node",
+    "types": ["node"]
+  }
 }
-
