need to figure out ts generation - build runner is making empty files or in wrong location

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -12,6 +12,7 @@ linter:
     missing_whitespace_between_adjacent_strings: false
     cascade_invocations: false
     avoid_single_cascade_in_expression_statements: false
+    lines_longer_than_80_chars: false
 # temporary - should be added back before publishing
     public_member_api_docs: false
     avoid_catches_without_on_clauses: false
